--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "npx cypress open",
-    "cy:run": "npx cypress run"
+    "cy:run": "npx cypress run",
+    "report:merge": "mochawesome-merge > index.json",
+    "report:mocha": "marge index.json",
+    "report:clean": "rimraf mochawesome-report index.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chance": "^1.1.8",
-    "cypress": "^8.6.0"
-  }
+    "cypress": "^8.6.0",
+    "cypress-multi-reporters": "^1.5.0",
+    "mochawesome": "^6.3.1",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^5.2.0",
+    "rimraf": "^3.0.2"
+  },
+  "dependencies": {}
 }
